[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Protagonist.png" type="Texture" id=1]
[ext_resource path="res://Scenes/IceScater.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Resources/Graphics/Characters/ProtagonistDead.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sounds/gunshot.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Graphics/ActiveShieldENGAGED.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Screenshaker.gd" type="Script" id=8]

[node name="Player" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )
z_index = 2
collision_layer = 1
collision_mask = 20
script = ExtResource( 4 )
health = 240
rotationIncrease = 100

[node name="DeadSprite" parent="." index="0"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="AliveSprite" parent="." index="1"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="BoostCooldownTimer" type="Timer" parent="." index="5"]
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="Shield" type="Sprite" parent="." index="6"]
visible = false
position = Vector2( 1, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="GunShotPlayer" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource( 6 )
max_distance = 4500.0
bus = "SoundEffects"
__meta__ = {
"_editor_description_": ""
}

[node name="PlayerCamera" type="Camera2D" parent="." index="8"]
position = Vector2( 9.29779, 1.66644 )
current = true
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 2160
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="Screenshaker" type="Node" parent="PlayerCamera" index="0"]
script = ExtResource( 8 )

[node name="ShakeTween" type="Tween" parent="PlayerCamera/Screenshaker" index="0"]

[node name="Frequency" type="Timer" parent="PlayerCamera/Screenshaker" index="1"]

[node name="Duration" type="Timer" parent="PlayerCamera/Screenshaker" index="2"]

[node name="SlowdownTimer" type="Timer" parent="." index="9"]
wait_time = 10.0
one_shot = true

[node name="ShieldTimer" type="Timer" parent="." index="10"]
one_shot = true
[connection signal="timeout" from="PlayerCamera/Screenshaker/Frequency" to="PlayerCamera/Screenshaker" method="_on_Frequency_timeout"]
[connection signal="timeout" from="PlayerCamera/Screenshaker/Duration" to="PlayerCamera/Screenshaker" method="_on_Duration_timeout"]
[connection signal="timeout" from="SlowdownTimer" to="." method="_on_SlowdownTimer_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
